--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-architect
-title: Sigma Delta Technology
-description: Home page da Sigma Delta Technology
+title: Sigma Delta
+description: Home page da Sigma Delta
 show_downloads: false
 
 # Google services
