Ajuste de layout do Título

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-architect
-title: Sigma Delta
+title: SIGMA DELTA TECNOLOGIA
 description: Home page da Sigma Delta
 show_downloads: false
 
